--- a/mundo.html
+++ b/mundo.html
@@ -82,7 +82,7 @@
                     </span>
                 </a>
                     <ul class="sublista">
-                        <li><a href="">Cavaleiros</a></li>
+                        <li><a href="quadrantes-cavaleiros .html">Cavaleiros</a></li>
                         <li><a href="">Curandeiro</a></li>
                         <li><a href="">Infantaria</a></li>
                         <li><a href="">Escriba</a></li>
