--- a/mundo.html
+++ b/mundo.html
@@ -83,9 +83,9 @@
                 </a>
                     <ul class="sublista">
                         <li><a href="quadrantes-cavaleiros .html">Cavaleiros</a></li>
-                        <li><a href="">Curandeiro</a></li>
-                        <li><a href="">Infantaria</a></li>
-                        <li><a href="">Escriba</a></li>
+                        <li><a href="quadrantes-curandeiros.html">Curandeiro</a></li>
+                        <li><a href="quadrantes-infantaria.html">Infantaria</a></li>
+                        <li><a href="quadrantes-escriba.html">Escriba</a></li>
                     </ul>
                 </li>
             </ul>
