--- a/quadrantes-cavaleiros .html
+++ b/quadrantes-cavaleiros .html
@@ -84,8 +84,8 @@
                     <ul class="sublista">
                         <li><a href="quadrantes-cavaleiros .html">Cavaleiros</a></li>
                         <li><a href="quadrantes-curandeiros.html">Curandeiro</a></li>
-                        <li><a href="">Infantaria</a></li>
-                        <li><a href="">Escriba</a></li>
+                        <li><a href="quadrantes-infantaria.html">Infantaria</a></li>
+                        <li><a href="quadrantes-escriba.html">Escriba</a></li>
                     </ul>
                 </li>
             </ul>
@@ -96,7 +96,7 @@
         <div class="inicio-cavaleiros row">
             <div class="col-md-8">
                 <div>
-                    <h1>quadrante de cavaleiros</h1>
+                    <h1>Quadrante de cavaleiros</h1>
                     <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
                     <div>
                         <p>O Quadrante dos Cavaleiros é um dos quatro Quadrantes da Academia de Guerra de Basgiath.</p>
