segunda e primeira doc

--- a/conhecimentos/magia.html
+++ b/conhecimentos/magia.html
@@ -43,7 +43,7 @@
                         </span>
                     </a>
                     <ul class="sublista">
-                        <li><a href="">Primeira Asa</a></li>
+                        <li><a href="../asas/primeira.html">Primeira Asa</a></li>
                         <li><a href="">Segunda Asa</a></li>
                         <li><a href="">Terceira Asa</a></li>
                         <li><a href="">Quarta Asa</a></li>
