doc+  links menu

--- a/conhecimentos/literatura.html
+++ b/conhecimentos/literatura.html
@@ -43,10 +43,10 @@
                         </span>
                     </a>
                     <ul class="sublista">
-                        <li><a href="">Primeira Asa</a></li>
-                        <li><a href="">Segunda Asa</a></li>
-                        <li><a href="">Terceira Asa</a></li>
-                        <li><a href="">Quarta Asa</a></li>
+                        <li><a href="../asas/primeira.html">Primeira Asa</a></li>
+                        <li><a href="../asas/segunda.html">Segunda Asa</a></li>
+                        <li><a href="../asas/terceira.html">Terceira Asa</a></li>
+                        <li><a href="../asas/quarta.html">Quarta Asa</a></li>
                     </ul>
                 </li>
                 <li>
@@ -56,11 +56,11 @@
                         </span>
                     </a>
                     <ul id="sublista-2" class="sublista">
-                        <li><a href="dragon.html">Dragão</a></li>
-                        <li><a href="humano.html">Humano</a></li>
-                        <li><a href="Venin.html">Venin</a></li>
-                        <li><a href="wyvern.html">Wyvern</a></li>
-                        <li><a href="grifo.html">Grifo</a></li>
+                        <li><a href="../especies/dragon.html">Dragão</a></li>
+                        <li><a href="../especies/humano.html">Humano</a></li>
+                        <li><a href="../especies/Venin.html">Venin</a></li>
+                        <li><a href="../especies/wyvern.html">Wyvern</a></li>
+                        <li><a href="../especies/grifo.html">Grifo</a></li>
                     </ul>
                 </li>
                 <li>
@@ -81,10 +81,10 @@
                     </span>
                 </a>
                     <ul class="sublista">
-                        <li><a href="cavaleiros.html">Cavaleiros</a></li>
-                        <li><a href="curandeiros.html">Curandeiro</a></li>
-                        <li><a href="infantaria.html">Infantaria</a></li>
-                        <li><a href="escriba.html">Escriba</a></li>
+                        <li><a href="../conhecimentos/cavaleiros.html">Cavaleiros</a></li>
+                        <li><a href="../conhecimentos/curandeiros.html">Curandeiro</a></li>
+                        <li><a href="../conhecimentos/infantaria.html">Infantaria</a></li>
+                        <li><a href="../conhecimentos/escriba.html">Escriba</a></li>
                     </ul>
                 </li>
             </ul>
