--- a/asas/primeira.html
+++ b/asas/primeira.html
@@ -56,11 +56,11 @@
                         </span>
                     </a>
                     <ul id="sublista-2" class="sublista">
-                        <li><a href="dragon.html">Dragão</a></li>
-                        <li><a href="humano.html">Humano</a></li>
-                        <li><a href="Venin.html">Venin</a></li>
-                        <li><a href="wyvern.html">Wyvern</a></li>
-                        <li><a href="grifo.html">Grifo</a></li>
+                        <li><a href="../especies/dragon.html">Dragão</a></li>
+                        <li><a href="../especies/humano.html">Humano</a></li>
+                        <li><a href="../especies/Venin.html">Venin</a></li>
+                        <li><a href="../especies/wyvern.html">Wyvern</a></li>
+                        <li><a href="../especies/grifo.html">Grifo</a></li>
                     </ul>
                 </li>
                 <li>
@@ -70,8 +70,8 @@
                         </span>
                     </a>
                     <ul class="sublista">
-                        <li><a href="literatura.html">Literatura</a></li>
-                        <li><a href="magia.html">Magia</a></li>
+                        <li><a href="../conhecimentos/literatura.html">Literatura</a></li>
+                        <li><a href="../conhecimentos/magia.html">Magia</a></li>
                     </ul>
                 </li>
                 <li>
@@ -81,10 +81,10 @@
                     </span>
                 </a>
                     <ul class="sublista">
-                        <li><a href="cavaleiros.html">Cavaleiros</a></li>
-                        <li><a href="curandeiros.html">Curandeiro</a></li>
-                        <li><a href="infantaria.html">Infantaria</a></li>
-                        <li><a href="escriba.html">Escriba</a></li>
+                        <li><a href="../conhecimentos/cavaleiros.html">Cavaleiros</a></li>
+                        <li><a href="../conhecimentos/curandeiros.html">Curandeiro</a></li>
+                        <li><a href="../conhecimentos/infantaria.html">Infantaria</a></li>
+                        <li><a href="../conhecimentos/escriba.html">Escriba</a></li>
                     </ul>
                 </li>
             </ul>
