doc = links header

--- a/conhecimentos/literatura.html
+++ b/conhecimentos/literatura.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <header>
+      <header>
         <div class="container d-flex justify-content-between align-items-center head">
             <div class="logo"><img src="../imagens/logo.svg" alt=""></div>
             <div class="menu-hamburguer">
@@ -22,9 +22,9 @@
             </div>
             <nav class="menu">
                 <ul class="menu-lista">
-                    <li class="menu-links"><a href="index.html">Home</a></li>
-                    <li class="menu-links"><a href="sinopse.html">Sinopse</a></li>
-                    <li class="menu-links"><a href="mundo.html">Mundo</a></li>
+                    <li class="menu-links"><a href="../index.html">Home</a></li>
+                    <li class="menu-links"><a href="../sinopse.html">Sinopse</a></li>
+                    <li class="menu-links"><a href="../mundo.html">Mundo</a></li>
                     <li class="menu-links"><a href="#">Personagens</a></li>
                     <li class="menu-links"><a href="#">Galeria</a></li>
                     <li class="menu-links"><a href="#">Teorias</a></li>
@@ -32,7 +32,7 @@
             </ul>
             </nav>
         </div>
-    </header>
+      </header>
     
         <div class="container-lista">
             <ul  class="lista-principal">
