--- a/asas/quarta.html
+++ b/asas/quarta.html
@@ -81,10 +81,10 @@
                 </span>
             </a>
                 <ul class="sublista">
-                    <li><a href="../conhecimentos/cavaleiros.html">Cavaleiros</a></li>
-                    <li><a href="../conhecimentos/curandeiros.html">Curandeiro</a></li>
-                    <li><a href="../conhecimentos/infantaria.html">Infantaria</a></li>
-                    <li><a href="../conhecimentos/escriba.html">Escriba</a></li>
+                    <li><a href="../quadrantes/cavaleiros.html">Cavaleiros</a></li>
+                    <li><a href="../quadrantes/curandeiros.html">Curandeiro</a></li>
+                    <li><a href="../quadrantes/infantaria.html">Infantaria</a></li>
+                    <li><a href="../quadrantes/escriba.html">Escriba</a></li>
                 </ul>
             </li>
         </ul>
