--- a/especies/Venin.html
+++ b/especies/Venin.html
@@ -82,10 +82,10 @@
                     </span>
                 </a>
                     <ul class="sublista">
-                        <li><a href="cavaleiros.html">Cavaleiros</a></li>
-                        <li><a href="curandeiros.html">Curandeiro</a></li>
-                        <li><a href="infantaria.html">Infantaria</a></li>
-                        <li><a href="escriba.html">Escriba</a></li>
+                        <li><a href="../quadrantes/cavaleiros.html">Cavaleiros</a></li>
+                        <li><a href="../quadrantes/curandeiros.html">Curandeiro</a></li>
+                        <li><a href="../quadrantes/infantaria.html">Infantaria</a></li>
+                        <li><a href="../quadrantes/escriba.html">Escriba</a></li>
                     </ul>
                 </li>
             </ul>
