--- a/asas/terceira.html
+++ b/asas/terceira.html
@@ -80,11 +80,12 @@
                   <img src="../imagens/imagens-mundo/sinal-de-seta-para-baixo-para-navegar.png" alt="">
               </span>
           </a>
-              <ul class="sublista">
-                  <li><a href="../conhecimentos/cavaleiros.html">Cavaleiros</a></li>
-                  <li><a href="../conhecimentos/curandeiros.html">Curandeiro</a></li>
-                  <li><a href="../conhecimentos/infantaria.html">Infantaria</a></li>
-                  <li><a href="../conhecimentos/escriba.html">Escriba</a></li>
+              
+                <ul class="sublista">
+                  <li><a href="../quadrantes/cavaleiros.html">Cavaleiros</a></li>
+                  <li><a href="../quadrantes/curandeiros.html">Curandeiro</a></li>
+                  <li><a href="../quadrantes/infantaria.html">Infantaria</a></li>
+                  <li><a href="../quadrantes/escriba.html">Escriba</a></li>
               </ul>
           </li>
       </ul>
