--- a/quadrantes/curandeiros.html
+++ b/quadrantes/curandeiros.html
@@ -93,12 +93,15 @@
         
     
     <main class="conteudo-mundo">
-        <div class="inicio-cavaleiros row">
+        <div class="inicio row">
             <div class="col-md-8">
                 <div>
                     <h1>Quadrante de Curandeiros</h1>
                     <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
                     <div class="lista-topicos">
+                        <div class="container-conteudo">
+                            <h3>Conteudo</h3>
+                        </div>
                         <ol>
                             <li><a href="">informação Geral</a></li>
                             <li><a href=""> Infomações Adicionais</a>
