--- a/quadrantes/infantaria.html
+++ b/quadrantes/infantaria.html
@@ -43,10 +43,10 @@
                         </span>
                     </a>
                     <ul class="sublista">
-                        <li><a href="">Primeira Asa</a></li>
-                        <li><a href="">Segunda Asa</a></li>
-                        <li><a href="">Terceira Asa</a></li>
-                        <li><a href="">Quarta Asa</a></li>
+                        <li><a href="../asas/primeira.html">Primeira Asa</a></li>
+                        <li><a href="../asas/segunda.html">Segunda Asa</a></li>
+                        <li><a href="../asas/terceira.html">Terceira Asa</a></li>
+                        <li><a href="../asas/quarta.html">Quarta Asa</a></li>
                     </ul>
                 </li>
                 <li>
@@ -56,11 +56,11 @@
                         </span>
                     </a>
                     <ul id="sublista-2" class="sublista">
-                        <li><a href="">Dragão</a></li>
-                        <li><a href="">Humano</a></li>
-                        <li><a href="">Venin</a></li>
-                        <li><a href="">Wyvern</a></li>
-                        <li><a href="">Grifo</a></li>
+                        <li><a href="../especies/dragon.html">Dragão</a></li>
+                        <li><a href="../especies/humano.html">Humano</a></li>
+                        <li><a href="../especies/Venin.html">Venin</a></li>
+                        <li><a href="../especies/wyvern.html">Wyvern</a></li>
+                        <li><a href="../especies/grifo.html">Grifo</a></li>
                     </ul>
                 </li>
                 <li>
@@ -70,9 +70,8 @@
                         </span>
                     </a>
                     <ul class="sublista">
-                        <li><a href="">Literatura</a></li>
-                        <li><a href="">Magia</a></li>
-                        <li><a href="">Linha do tempo Canano</a></li>
+                        <li><a href="../conhecimentos/literatura.html">Literatura</a></li>
+                        <li><a href="../conhecimentos/magia.html">Magia</a></li>
                     </ul>
                 </li>
                 <li>
