--- a/quadrantes/curandeiros.html
+++ b/quadrantes/curandeiros.html
@@ -119,10 +119,10 @@
                     <div class="card-header text-center">Quadrante Cavaleiros
                     </div>
                     <div class="card-body">
-                        <img src="../imagens/imagens-mundo/RidersSymbolAmazon.webp" alt="" class="mx-auto d-block">
+                        <img src="../imagens/imagens-mundo/HealersSymbolAmazon.webp" alt="" class="mx-auto d-block">
                     </div>
                     <div class="card-footer">
-                        Lozalizado: <small><a href="">Academia de guerra Basgiath</a></small>
+                        Localizado: <b>Academia de guerra Basgiath</b>
                     </div>
                     
                 </div>
