--- a/quadrantes/escriba.html
+++ b/quadrantes/escriba.html
@@ -128,7 +128,7 @@
                         <img src="../imagens/imagens-mundo/ScribesSymbolAmazon.webp" alt="" class="mx-auto d-block">
                     </div>
                     <div class="card-footer">
-                        Lozalizado: <b>Academia de guerra Basgiath</b>
+                        Localizado: <b>Academia de guerra Basgiath</b>
                     </div>
                     
                 </div>
