class especies (inicio)

--- a/especies/humano.html
+++ b/especies/humano.html
@@ -94,7 +94,7 @@
         
     
     <main class="conteudo-mundo">
-        <div class="inicio-cavaleiros row">
+        <div class="inicio row">
             <div class="col-md-8">
                 <div>
                     <h1>Humanos</h1>
