--- a/conhecimentos/magia.html
+++ b/conhecimentos/magia.html
@@ -96,7 +96,7 @@
             <div class="col-md-8">
                 <div>
                     <h1>Magia</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>Compilação de todas as informações sobre o sistema de magia na Série Empyrean.</p>
                     <div class="lista-topicos">
                       <ol>
                         <li><a href="#general-information">Informações Gerais</a></li>
