--- a/especies/Venin.html
+++ b/especies/Venin.html
@@ -98,7 +98,7 @@
             <div class="col-md-8">
                 <div>
                     <h1>Venin</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>Venin (também conhecidos como Dark Wielders ) são uma espécie de humanos no Mundo Conhecido que obtém poder da fonte.</p>
                     <div class="lista-topicos">
                         <ol>
                             <li><a href="#historia">História</a></li>
