--- a/especies/dragon.html
+++ b/especies/dragon.html
@@ -97,7 +97,8 @@
             <div class="col-md-8">
                 <div>
                     <h1>Dragão</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p><q>Um dragão sem seu cavaleiro é uma tragédia. Um cavaleiro sem seu dragão está morto. -Artigo 1, Seção 1, The Dragon Rider's Codex</q></p>
+                    <p>Dragões , também conhecidos como dragões , são uma das espécies capazes de se relacionar com humanos e compartilhar seus poderes mágicos com eles.</p>
                     <div class="lista-topicos">
                         <ol>
                                 <li>Informações Gerais</li>
