--- a/especies/wyvern.html
+++ b/especies/wyvern.html
@@ -98,7 +98,7 @@
             <div class="col-md-8">
                 <div>
                     <h1>Wyvern</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>Wyverns são uma espécie de criaturas bípedes semelhantes a dragões , criadas por Venin .</p>
                     <div class="lista-topicos">
                         <ol>
                             <li><a href="#informacoes-gerais">Informações Gerais</a></li>
