--- a/especies/grifo.html
+++ b/especies/grifo.html
@@ -98,7 +98,7 @@
             <div class="col-md-8">
                 <div>
                     <h1>Grifo</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>Grifos são uma das espécies capazes de se relacionar com humanos e compartilhar seus poderes, principalmente mentais , com eles.</p>
                     <div class="lista-topicos">
                             <ol>
                               <li><a href="#informacoes-gerais">Informações Gerais</a></li>
