--- a/quadrantes/escriba.html
+++ b/quadrantes/escriba.html
@@ -96,7 +96,8 @@
             <div class="col-md-8">
                 <div>
                     <h1>Quadrante dos Escribas</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>"É dever dos escribas não apenas estudar e dominar o passado, mas também relatar e registrar o presente." - Professor Markham</p>
+                    <p>O Quadrante dos Escribas é um dos quatro Quadrantes do Colégio de Guerra de Basgiath.</p>
                     <div class="lista-topicos">
                         <div class="container-conteudo">
                             <h3>Conteudo</h3>
