--- a/asas/primeira.html
+++ b/asas/primeira.html
@@ -92,11 +92,11 @@
         
     
     <main class="conteudo-mundo">
-        <div class="inicio-cavaleiros row">
+        <div class="inicio row">
             <div class="col-md-8">
                 <div>
                     <h1>Primeira asa</h1>
-                    <p><q>No Quadrante, há uma mistura de um hedonismo do tipo 'podemos morrer a qualquer momento' e uma eficiência brutal, tudo em prol do mesmo objetivo.</q></p>
+                    <p>A Primeira Asa é um grupo dentro do Quadrante de Cavaleiros da Escola de Guerra de Basgiath .</p>
                     <div class="lista-topicos">
                       <ol>
                         <li><a href="#known-members">Membros Conhecidos</a>
