--- a/especies/dragon.html
+++ b/especies/dragon.html
@@ -100,139 +100,137 @@
                     <p><q>Um dragão sem seu cavaleiro é uma tragédia. Um cavaleiro sem seu dragão está morto. -Artigo 1, Seção 1, The Dragon Rider's Codex</q></p>
                     <p>Dragões , também conhecidos como dragões , são uma das espécies capazes de se relacionar com humanos e compartilhar seus poderes mágicos com eles.</p>
                     <div class="lista-topicos">
-                        <ol>
-                                <li>Informações Gerais</li>
-                                <li>Descrição Física</li>
-                                <li>Estágios da Vida
+                            <ol>
+                              <li><a href="#informacoes-gerais">Informações Gerais</a></li>
+                              <li><a href="#descricao-fisica">Descrição Física</a></li>
+                              <li><a href="#estagios-vida">Estágios da Vida</a>
                                 <ol>
-                                    <li>Ninhadas</li>
-                                    <li>Filhotes</li>
-                                    <li>Juvenis</li>
-                                    <li>Adolescentes</li>
-                                    <li>O Sono Sem Sonhos</li>
-                                    <li>Totalmente Maturados</li>
+                                  <li><a href="#ninhadas">Ninhadas</a></li>
+                                  <li><a href="#filhotes">Filhotes</a></li>
+                                  <li><a href="#juvenis">Juvenis</a></li>
+                                  <li><a href="#adolescentes">Adolescentes</a></li>
+                                  <li><a href="#sono-sem-sonhos">O Sono Sem Sonhos</a></li>
+                                  <li><a href="#totalmente-maturados">Totalmente Maturados</a></li>
                                 </ol>
-                                </li>
-                                <li>Companheiros</li>
-                                <li>O Empyrean</li>
-                                <li>Poderes e Habilidades
+                              </li>
+                              <li><a href="#companheiros">Companheiros</a></li>
+                              <li><a href="#empyrean">O Empyrean</a></li>
+                              <li><a href="#poderes-habilidades">Poderes e Habilidades</a>
                                 <ol>
-                                    <li>Poderes
+                                  <li><a href="#poderes">Poderes</a>
                                     <ol>
-                                        <li>Dons Juvenis</li>
-                                        <li>Magia</li>
-                                        <li>Marca (Signet)</li>
-                                        <li>Relíquia de Dragão</li>
+                                      <li><a href="#dons-juvenis">Dons Juvenis</a></li>
+                                      <li><a href="#magia">Magia</a></li>
+                                      <li><a href="#marca-signet">Marca (Signet)</a></li>
+                                      <li><a href="#reliquia-dragao">Relíquia de Dragão</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Habilidades
+                                  </li>
+                                  <li><a href="#habilidades">Habilidades</a>
                                     <ol>
-                                        <li>Voo</li>
-                                        <li>Fogo de Dragão</li>
-                                        <li>Telepatia</li>
-                                        <li>Sensibilidade</li>
+                                      <li><a href="#voo">Voo</a></li>
+                                      <li><a href="#fogo-dragao">Fogo de Dragão</a></li>
+                                      <li><a href="#telepatia">Telepatia</a></li>
+                                      <li><a href="#sensibilidade">Sensibilidade</a></li>
                                     </ol>
-                                    </li>
+                                  </li>
                                 </ol>
-                                </li>
-                                <li>Ligação (Bonding)</li>
-                                <li>Ninhos (Cor)
+                              </li>
+                              <li><a href="#ligacao-bonding">Ligação (Bonding)</a></li>
+                              <li><a href="#ninhos-cor">Ninhos (Cor)</a>
                                 <ol>
-                                    <li>Dragões Pretos
+                                  <li><a href="#dragoes-pretos">Dragões Pretos</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-pretos">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-pretos">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Dragões Azuis
+                                  </li>
+                                  <li><a href="#dragoes-azuis">Dragões Azuis</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-azuis">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-azuis">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Dragões Verdes
+                                  </li>
+                                  <li><a href="#dragoes-verdes">Dragões Verdes</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-verdes">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-verdes">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Dragões Marrons
+                                  </li>
+                                  <li><a href="#dragoes-marrons">Dragões Marrons</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-marrons">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-marrons">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Dragões Laranja
+                                  </li>
+                                  <li><a href="#dragoes-laranja">Dragões Laranja</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-laranja">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-laranja">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Dragões Vermelhos
+                                  </li>
+                                  <li><a href="#dragoes-vermelhos">Dragões Vermelhos</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-vermelhos">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-vermelhos">Descendem de</a></li>
                                     </ol>
-                                    </li>
-                                    <li>Irides, Dragões Iridescentes [21]
+                                  </li>
+                                  <li><a href="#dragoes-irides">Irides, Dragões Iridescentes [21]</a>
                                     <ol>
-                                        <li>Conhecidos por</li>
-                                        <li>Descendem de</li>
+                                      <li><a href="#conhecidos-por-irides">Conhecidos por</a></li>
+                                      <li><a href="#descendem-de-irides">Descendem de</a></li>
                                     </ol>
-                                    </li>
+                                  </li>
                                 </ol>
-                                </li>
-                                <li>Raças (Tipo de Cauda)
+                              </li>
+                              <li><a href="#racas-tipo-cauda">Raças (Tipo de Cauda)</a>
                                 <ol>
-                                    <li>Cauda de Clava (Clubtail)</li>
-                                    <li>Cauda de Adaga (Daggertail)</li>
-                                    <li>Cauda de Estrela da Manhã (Morningstartail)</li>
-                                    <li>Cauda de Escorpião (Scorpiontail)</li>
-                                    <li>Cauda de Espada (Swordtail)</li>
-                                    <li>Cauda de Pena (Feathertail)</li>
+                                  <li><a href="#cauda-clava">Cauda de Clava (Clubtail)</a></li>
+                                  <li><a href="#cauda-adaga">Cauda de Adaga (Daggertail)</a></li>
+                                  <li><a href="#cauda-estrela-manha">Cauda de Estrela da Manhã (Morningstartail)</a></li>
+                                  <li><a href="#cauda-escorpiao">Cauda de Escorpião (Scorpiontail)</a></li>
+                                  <li><a href="#cauda-espada">Cauda de Espada (Swordtail)</a></li>
+                                  <li><a href="#cauda-pena">Cauda de Pena (Feathertail)</a></li>
                                 </ol>
-                                </li>
-                                <li>Linhas Ancestrais
+                              </li>
+                              <li><a href="#linhas-ancestrais">Linhas Ancestrais</a>
                                 <ol>
-                                    <li>Linha Dubhmadinn</li>
-                                    <li>Linha Gormfaileas</li>
-                                    <li>Linha Desconhecida (Irides)</li>
-                                    <li>Linha Uaineloidsig</li>
-                                    <li>Linha Cruaidhuaine</li>
-                                    <li>Linha Fhaicorain</li>
+                                  <li><a href="#linha-dubhmadinn">Linha Dubhmadinn</a></li>
+                                  <li><a href="#linha-gormfaileas">Linha Gormfaileas</a></li>
+                                  <li><a href="#linha-desconhecida-irides">Linha Desconhecida (Irides)</a></li>
+                                  <li><a href="#linha-uaineloidsig">Linha Uaineloidsig</a></li>
+                                  <li><a href="#linha-cruaidhuaine">Linha Cruaidhuaine</a></li>
+                                  <li><a href="#linha-fhaicorain">Linha Fhaicorain</a></li>
                                 </ol>
-                                </li>
-                                <li>Locais de Eclosão
+                              </li>
+                              <li><a href="#locais-eclosao">Locais de Eclosão</a>
                                 <ol>
-                                    <li>Cordilheira de Steelridge, O Vale</li>
-                                    <li>Vale Térmico de Aretia</li>
-                                    <li>Cordilheira de Esben do Norte</li>
-                                    <li>Cordyn</li>
-                                    <li>Rio Dunness</li>
+                                  <li><a href="#cordilheira-steelridge-vale">Cordilheira de Steelridge, O Vale</a></li>
+                                  <li><a href="#vale-termico-aretia">Vale Térmico de Aretia</a></li>
+                                  <li><a href="#cordilheira-esben-norte">Cordilheira de Esben do Norte</a></li>
+                                  <li><a href="#cordyn">Cordyn</a></li>
+                                  <li><a href="#rio-dunness">Rio Dunness</a></li>
                                 </ol>
-                                </li>
-                                <li>Dragões Conhecidos
+                              </li>
+                              <li><a href="#dragoes-conhecidos">Dragões Conhecidos</a>
                                 <ol>
-                                    <li>Dragões Não Nomeados</li>
+                                  <li><a href="#dragoes-nao-nomeados">Dragões Não Nomeados</a></li>
                                 </ol>
-                                </li>
-                                <li>Galeria</li>
-                                <li>Curiosidades</li>
-                                <li>Citações</li>
-                        </ol>
+                              </li>
+                              <li><a href="#galeria">Galeria</a></li>
+                              <li><a href="#curiosidades">Curiosidades</a></li>
+                              <li><a href="#citacoes">Citações</a></li>
+                            </ol>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-header text-center">Humanos
+                    <div class="card-header text-center">Dragão
                     </div>
                     <div class="card-body">
-                        <img src="../imagens/imagens-mundo/RidersSymbolAmazon.webp" alt="" class="mx-auto d-block">
+                        <img src="imagens/dragon.svg" alt="dragão" class="mx-auto d-block">
                     </div>
-                    <div class="card-footer">
-                        Lozalizado: <small><a href="">Academia de guerra Basgiath</a></small>
-                    </div>
+                    
                     
                 </div>
             </div>
