--- a/especies/humano.html
+++ b/especies/humano.html
@@ -118,7 +118,7 @@
                     <div class="card-header text-center">Humanos
                     </div>
                     <div class="card-body">
-                        <img src="../imagens/imagens-mundo/RidersSymbolAmazon.webp" alt="" class="mx-auto d-block">
+                        <img src="imagens/humano.svg" alt="" class="mx-auto d-block">
                     </div>
                     <div class="card-footer">
                         Lozalizado: <small><a href="">Academia de guerra Basgiath</a></small>
