--- a/especies/wyvern.html
+++ b/especies/wyvern.html
@@ -118,10 +118,10 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-header text-center">Humanos
+                    <div class="card-header text-center">Wyvern
                     </div>
                     <div class="card-body">
-                        <img src="../imagens/imagens-mundo/RidersSymbolAmazon.webp" alt="" class="mx-auto d-block">
+                        <img src="imagens/wyvern.svg" alt="" class="mx-auto d-block">
                     </div>
                     <div class="card-footer">
                         Lozalizado: <small><a href="">Academia de guerra Basgiath</a></small>
