--- a/mundo.html
+++ b/mundo.html
@@ -97,7 +97,7 @@
 
         <section>
             <div>
-                <h1 class="text-center">O Continente</h1>
+                <h1 class="r">O Continente</h1>
                 <p class="text-indent-total-p text-padding">O continente, dividido em dois reinos distintos, Navarre e Poromiel, é cercado pelas vastas e inóspitas Terras Estéreis, um deserto cristalizado, além das fronteiras civilizadas. Registros reais antigos de Navarre revelam que a formação terrestre era originalmente conhecida como Amaralys, 'vale das estrelas', pelos navarrianos, enquanto os registros poromsh a chamavam de Amelekis, 'fronteira esquecida'. Após a devastadora Grande Guerra, travada em sua maior parte nas montanhas que dividem o continente, e que liberou magias que tornaram as Terras Estéreis inabitáveis, um nome neutro foi acordado entre os reinos, resultando na designação coletiva de 'O Continente'. Esse acordo, no entanto, é um pacto frágil, imposto por circunstâncias desesperadoras, com ressentimentos persistentes entre os reinos.</p>
                 <div class="mapa">
                     <img src="imagens/imagens-mundo/mapa-completo.png" alt="">
