--- a/conhecimentos/magia.html
+++ b/conhecimentos/magia.html
@@ -25,7 +25,7 @@
                   <li class="menu-links"><a href="../index.html">Home</a></li>
                   <li class="menu-links"><a href="../sinopse.html">Sinopse</a></li>
                   <li class="menu-links"><a href="../mundo.html">Mundo</a></li>
-                  <li class="menu-links"><a href="#">Personagens</a></li>
+                  <li class="menu-links"><a href="../personagens/personagens.html">Personagens</a></li>
                   <li class="menu-links"><a href="#">Galeria</a></li>
                   <li class="menu-links"><a href="#">Teorias</a></li>
                   
