--- a/sinopse.html
+++ b/sinopse.html
@@ -41,13 +41,13 @@
             <div class=" d-flex justify-content-start align-items-center">  
                 <div class="sinopse-conteudo">
                     <h1>Quarta Asa</h1>
-                    <p>Prefiro perder esta guerra inteira a viver sem você, e se isso significar que tenho que me provar várias vezes, então eu farei isso.</p>
+                    
                     <p>Um dragão sem seu cavaleiro é uma tragédia.</p>
 
                     <p>Um cavaleiro sem seu dragão é um homem morto.</p>
                     <p>"Em Basgiath, dragões escolhem seus cavaleiros. Violet Sorrengail, frágil e destinada aos livros, é lançada em um treinamento brutal para se tornar um deles. A morte espreita a cada passo, e dragões incineram os fracos. Rivais sedentos por poder, segredos ancestrais e uma guerra iminente testarão sua coragem. Em um mundo onde a lealdade é uma ilusão, Violet precisa escolher: sucumbir às chamas ou acender a faísca da rebelião."</p>
                     <div class="d-flex justify-content-end align-items-center">
-                        <a href="mundo.html">Explore os confins de Basgiath.</a>
+                        <a href="mundo.html">Explore os confins do Continente.</a>
                     </div>
                    
                 </div>
