style header, galaria de frases,cardfrases

--- a/personagens/personagens.html
+++ b/personagens/personagens.html
@@ -311,7 +311,7 @@
                 <h3 class="text-center">Dragões Preto</h3>
                 <div class="dragoes">
                     <div>
-                        <img src="imagens/dragões/preto.png" alt="">
+                        <img src="imagens/dragões/preto.png" alt="dragão preto" class="lado-esquedo">
                     </div>
                     <div class="info-dragoes">
                         <table>
