--- a/sinopse.html
+++ b/sinopse.html
@@ -25,10 +25,8 @@
                     <li class="menu-links"><a href="index.html">Home</a></li>
                     <li class="menu-links"><a href="sinopse.html">Sinopse</a></li>
                     <li class="menu-links"><a href="mundo.html">Mundo</a></li>
-                    <li class="menu-links"><a href="#">Personagens</a></li>
+                    <li class="menu-links"><a href="personagens/personagens.html">Personagens</a></li>
                     <li class="menu-links"><a href="#">Galeria</a></li>
-                    <li class="menu-links"><a href="#">Teorias</a></li>
-                    
             </ul>
             </nav>
         </div>
@@ -58,5 +56,6 @@
     
     <script src="lib/bootstrap.bundle-js.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="lib/geral.js"></script>
 </body>
 </html>
