--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
     <header>
         <div class="container d-flex justify-content-between align-items-center head">
             <div class="logo"><img src="imagens/logo.svg" alt=""></div>
-            <div class="menu-hamburguer">
-                <div class="linha-menu"></div>
-                <div class="linha-menu"></div>
-                <div class="linha-menu"></div>
+            <div class="menu-hamburguer" id="menu-hamburguer">
+                <div class="linha-menu" ></div>
+                <div class="linha-menu" ></div>
+                <div class="linha-menu" ></div>
             </div>
-            <nav class="menu">
+            <nav class="menu" id="menu">
                 <ul class="menu-lista">
                     <li class="menu-links"><a href="index.html">Home</a></li>
                     <li class="menu-links"><a href="sinopse.html">Sinopse</a></li>
                     <li class="menu-links"><a href="mundo.html">Mundo</a></li>
                     <li class="menu-links"><a href="#">Personagens</a></li>
                     <li class="menu-links"><a href="#">Galeria</a></li>
-                    <li class="menu-links"><a href="#">Teorias</a></li>
-                    
             </ul>
             </nav>
         </div>
@@ -201,5 +199,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="lib/animação-dragão.js"></script>
     <script src="lib/perguntas_galleria.js"></script>
+    <script src="lib/geral.js"></script>
 </body>
 </html>
