--- a/mundo.html
+++ b/mundo.html
@@ -15,19 +15,19 @@
     <header>
         <div class="container d-flex justify-content-between align-items-center head">
             <div class="logo"><img src="imagens/logo.svg" alt=""></div>
-            <div class="menu-hamburguer">
+            <div class="menu-hamburguer" id="menu-hamburguer">
                 <div class="linha-menu"></div>
                 <div class="linha-menu"></div>
                 <div class="linha-menu"></div>
             </div>
-            <nav class="menu">
+            <nav class="menu" id="menu">
                 <ul class="menu-lista">
                     <li class="menu-links"><a href="index.html">Home</a></li>
                     <li class="menu-links"><a href="sinopse.html">Sinopse</a></li>
                     <li class="menu-links"><a href="mundo.html">Mundo</a></li>
-                    <li class="menu-links"><a href="#">Personagens</a></li>
+                    <li class="menu-links"><a href="personagens/personagens.html">Personagens</a></li>
                     <li class="menu-links"><a href="#">Galeria</a></li>
-                    <li class="menu-links"><a href="#">Teorias</a></li>
+                    
                     
             </ul>
             </nav>
