--- a/asas/terceira.html
+++ b/asas/terceira.html
@@ -25,9 +25,9 @@
                   <li class="menu-links"><a href="../index.html">Home</a></li>
                   <li class="menu-links"><a href="../sinopse.html">Sinopse</a></li>
                   <li class="menu-links"><a href="../mundo.html">Mundo</a></li>
-                  <li class="menu-links"><a href="#">Personagens</a></li>
+                  <li class="menu-links"><a href="../personagens/personagens.html">Personagens</a></li>
                   <li class="menu-links"><a href="#">Galeria</a></li>
-                  <li class="menu-links"><a href="#">Teorias</a></li>
+                  
                   
           </ul>
           </nav>
